--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 
   <button onclick="connect">
     Get Account
-  <button/>
+  </button>
     
   <button onclick="disconnect">
     Disconnect
-  <button/>
+  </button>
     
   <script>  
   
