--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 
 <body>
 
-  <button onclick="connect">
+  <button onclick="connect()">
     Get Account
   </button>
     
-  <button onclick="disconnect">
+  <button onclick="disconnect()">
     Disconnect
   </button>
     
