--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     function connect () {
 
       console.log("connect");
-      winow.solanaConnect = window.solana.connect();
+      window.solanaConnect = window.solana.connect();
       window.solanaRequest = window.solana.request({ method: "connect" })
       
     }
