--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
   </button>
     
   <script>  
+    
+    // API
+    // window.solana.isConnected
+    // window.solana.isConnected
+    // window.solana.publicKey
+    // wallet.publicKey.toBytes()
+    // 
   
     function connect () {
 
