--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     // window.solana.isConnected
     // window.solana.publicKey
     // wallet.publicKey.toBytes()
-    // 
+    // window.solana.publicKey.toString()
   
     function connect () {
 
