--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     // window.solana.publicKey
     // wallet.publicKey.toBytes()
     // window.solana.publicKey.toString()
+    // window.solana.publicKey.toBase58()
   
     function connect () {
 
